# crwv-tracker

./: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  SUPABASE_SETUP.md  app.py  create_heroku_users.py  create_render_users.py  create_users.py  export_users.py  export_users_for_render.py  migrate_to_supabase.py  models.py  populate_data.py  pyproject.toml  recreate_users_render.py  requirements.txt  routes.py  scheduler.py  sms_service.py  stock_service.py  test_supabase_connection.py  users_export.sql
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  logs.html  register.html  settings.html  settings_login.html  user_login.html  user_settings.html  users.html
