[project]
name = "crwv-tracker"
version = "0.1.0"
description = "CRWV stock price tracker and SMS notification system"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "twilio>=9.6.2",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.62",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
]
